--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Jobble",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8"
+  },
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
